--- a/views/center_article.html
+++ b/views/center_article.html
@@ -38,6 +38,18 @@
       line-height: 40px;
       float: left;
   }
+  .right-title .tit-release {
+      float: right;
+      width: 76px;
+      height: 26px;
+      font-size: 14px;
+      color: #fff;
+      text-align: center;
+      line-height: 26px;
+      background-color: #c13232;
+      margin-top: 7px;
+      margin-right: 20px;
+  }
   .rel-case-map{
 	 	width:100%;
 	 	height:130px;
@@ -110,6 +122,7 @@
         <div class="right-cont case-cont">
             <div class="right-title clearfix" style="background: #f3f3f3">
                 <div class="tit">我的专栏</div>
+                <a href="{{helper.urlgen('advisor_center','postarticle')}}" class="tit-release" target="_blank">发布文章</a>
             </div>
             {% if article_data and article_data.list.length > 0 %}
             <div class="right-main clearfix case-list-box">
