置顶兼容ie低版本

--- a/views/widget2/article/article.html
+++ b/views/widget2/article/article.html
@@ -195,7 +195,8 @@
     else {
       //调用置顶接口
       $.ajax({
-        url: ajaxUrlPrefix.nodeapi+'/article_top',
+//        url: ajaxUrlPrefix.nodeapi+'/article_top',
+        url: '/article_top',
         type: 'POST',
         datatype: 'json',
         data: {
