搜索页单选按钮ie样式兼容

--- a/public/assets/css/search_result.css
+++ b/public/assets/css/search_result.css
@@ -166,6 +166,9 @@
     font-size: 16px;
     color: #333;
 }
+.page-search-type input[type="radio"] {
+    visibility: hidden;
+}
 .page-search-type input[type="radio"] + label:before {
     content: "";
     display: inline-block;
