--- a/views/case_detail.html
+++ b/views/case_detail.html
@@ -144,7 +144,7 @@
         </div>
         <div class="article_tuijian">
           <h1><div></div>相关推荐</h1>
-          {% esi helper.include(esikey,'fragment/article_xiangguantuijian','n='+userinfo.country,'c='+userinfo.organid,'is_news='+article.article_info.is_news,'tag_list='+ tag_list,'article_id='+article.article_info.id) %}
+          {% esi helper.include(esikey,'fragment/article_xiangguantuijian','n='+article.article_info.country_id,'c='+article.article_info.city_id,'is_news='+article.article_info.is_news,'tag_list='+ tag_list,'article_id='+article.article_info.id) %}
         </div>
         <!-- ========评论===== -->
         {% if userinfo.status == 0 %} 
