--- a/views/widget2/community_advisor/community_advisor.css
+++ b/views/widget2/community_advisor/community_advisor.css
@@ -46,11 +46,25 @@
   border-radius: 50%;
   -webkit-background-size: cover;
   background-size: cover;
+  position: relative;
+  overflow: hidden;
 }
 .community-advisor .advisor-img a{
   display: block;
   width: 100%;
   height: 100%;
+}
+.community-advisor .advisor-img .jjl_mark {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 28px;
+  /*color: #fff;
+  line-height: 28px;
+  text-align: center;
+  background-color: rgba(193,50,50,0.4);
+  font-size: 18px;*/
 }
 .community-advisor .advisor-name{
   font-size: 18px;
