修改 公司简介

--- a/views/about/cultures.html
+++ b/views/about/cultures.html
@@ -50,6 +50,9 @@
     margin-top: -2px;
     border-top:1px solid #C13232 ;
   }
+  .cultures-suojin {
+    text-indent:2em;
+  }
 </style>
 <body style="background: #f5f5f5">
 
@@ -64,7 +67,7 @@
     <p>“十年磨一剑”。公司经过19年的磨炼和发展，现已成为出国留学咨询服务行业中经营规模大、服务项目全面、品牌美誉度高、市场竞争力强的留学企业之一。每年帮助数万名学子实现了留学梦想，指导和帮助学生进行未来人生规划。公司拥有由两千多名经验丰富、业务精湛的咨询顾问及文案组成的专业团队，他们中很多老师是留学归国人员或具有海外工作、生活经历，不仅了解各国院校信息和申请流程，对海外学习和生活也有过亲身体会，能够为学生的留学生活进行全面细致和切合实际的规划。</p>
 
 
-    <h2 style="font-weight: 600">19年的砥砺前行，公司具备以下四大优势：</h2>
+    <h2 class="cultures-suojin" style="font-weight: 600">19年的砥砺前行，公司具备以下四大优势：</h2>
     <p><span style="font-weight: 600">优势一：</span>金吉列留学作为留学行业首部国家标准的推动和主要起草单位，与中国教育国际交流协会、北京留学服务行业协会共同完成《留学服务术语》与《留学中介服务规范》两部国家标准的起草。2016年11月，两项国家标准由中华人民共和国国家质量监督检验检疫总局、中国国家标准化管理委员会审核并正式发布。</p>
     <p><span style="font-weight: 600">优势二：</span>金吉列留学拥有美、英、加、澳、新、日、韩、德、法等24个国家和地区2000余所海外优质合作院校资源，供学生选择，其中包括众多世界知名院校，如美国杜克大学、南加州大学、布兰迪斯大学商学院、波士顿大学语言中心、东北大学、华盛顿大学，英国曼彻斯特大学、格拉斯哥大学，澳大利亚澳国立大学、墨尔本大学、悉尼大学，加拿大多伦多大学、西安大略大学，新西兰奥克兰大学、奥塔哥大学、惠灵顿维多利亚大学等。同时，金吉列留学成为美国U.S. News Global Education 咨询委员会董事单位，帮助学生和其家长在选择美国大学时，做出更恰当、更明智的决定，选择最符合学生兴趣和专长的大学。
     </p>
