--- a/views/widget/liuxue_item/liuxue_item.html
+++ b/views/widget/liuxue_item/liuxue_item.html
@@ -29,6 +29,8 @@
 .gw-people .bg-peopel,.gw-people a{float:left;height: 51px; width: 51px;border-radius: 50%;-webkit-border-radius:50%;}
 #guItems li:nth-child(3) .gw-people{margin-left: 26px;}
 .home-guanggao a{float: left;margin-right: 20px;background-color: #dcdcdc;}
+.home-guanggao a:nth-of-type(3){ margin-right: 0;}
+.home-guanggao a:last-child{ margin-right: 0;}
 .lx-head a{ font-size: 12px;color: #c13232;float: right;margin-top: 5px}
 </style>
 {% for floor in shouye %} {#国家#}
@@ -92,10 +94,9 @@
 	{% endfor %}{#类别end#}
 </div>
 	{% if loop.index <= 6 %}
-	<!-- 广告位图 -->
-	<div class="dui-layout-lg clearfix" style="margin-top:5px;width:1200px;">
-		<div class="home-guanggao" style="float:left;height:120px;margin-right:-20px;overflow:hidden;" id="AD_HOME_SEAT{{loop.index+10}}"></div>
-	</div>
+		<div class="dui-layout-lg clearfix" style="margin-top:5px;width:1200px;">
+			<div class="home-guanggao" style="float:left;overflow:hidden;" id="AD_HOME_SEAT{{loop.index+10}}"></div>
+		</div>
 	{% endif %}
 {% endfor %} {#国家end#}
 <script>
