--- a/views/login/loginUser.html
+++ b/views/login/loginUser.html
@@ -64,11 +64,11 @@
             <i style="color: #999;position: absolute;top: 8px;width: 12px;left: 13px" class="iconfont">&#xe606;</i>
           </div>-->
           <div class="form-group clearfix" style="margin-top: 20px;position: relative;">
-            <input placeholder="填写图形验证码" type="text" id="verify_user" class="form-control l_u_com_yan" required data-vaild="^\d{6}$" style="border-radius: inherit;height: 30px;line-heigth: 30px"/><!--data-errmsg="验证码号码不正确，仅能包含4位数字"-->
+            <input placeholder="填写图形验证码" type="text" id="tupian_user" class="form-control l_u_com_yan" required data-vaild="^\d{6}$" style="border-radius: inherit;height: 30px;line-heigth: 30px"/><!--data-errmsg="验证码号码不正确，仅能包含4位数字"-->
             <i style="color: #999;position: absolute;top: 8px;width: 12px;left: 10px" class="iconfont">&#xe606;</i>
             <div class="l_u_com_bang" style="margin-right: 0px;height: 30px;line-heigth: 30px;margin-top: -7px;">
             <!--<input type="button" class="button" id="sendcun" style="color: #999;border: 1px solid #999;font-size: .6rem;width: 3.5rem;padding: 0 .2rem" @click.stop.prevent="sendphone()" value="发送验证码"/>-->
-            <input type="button" class="btn btn-primary" style="width: 90px;height: 30px;text-align: center;padding: 6px 2px;background: #fff;color: #c13232;border: 1px solid #c13232;border-radius: 3px;line-height: 0px;border-radius: inherit;" id="sendcun_user" value="图片验证码"/>
+            <img class="" style="width: 90px;height: 30px;" id="tupiancun_user" />
             </div>
           </div>
 
