--- a/views/act_form.html
+++ b/views/act_form.html
@@ -464,5 +464,15 @@
     });
   })
 </script>
+    <script>
+      var _hmt = _hmt || [];
+      (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?27e9cf6d25e8551a8ad30712057bde86";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
+      })();
+    </script>
+    <script src="http://jesong.jjl.cn/skin.jsp?comp=1&config=181" type="text/javascript"></script>
 </body>
 </html>
