--- a/views/widget/top/top.html
+++ b/views/widget/top/top.html
@@ -179,7 +179,8 @@ input[type="checkbox"] {
         <i style="color: #999;position: absolute;top: 14px;width: 12px;left: 8px" class="iconfont">&#xe653;</i>
         <div class="l_u_com_bang">
           <!--<input type="button" class="button" id="sendcun" style="color: #999;border: 1px solid #999;font-size: .6rem;width: 3.5rem;padding: 0 .2rem" @click.stop.prevent="sendphone()" value="发送验证码"/>-->
-          <img class="" style="width: 90px;height: 40px;" id="tupiancun" />
+          <!--<img class="" style="width: 90px;height: 40px;" id="tupiancun" />-->
+          <div id="param_code" style="width: 90px;height: 30px;" onclick="showcode()"></div>
         </div>
       </div>
       <div class="form-group clearfix" style="margin-top: 20px;position: relative;">
