--- a/views/login/loginUser.html
+++ b/views/login/loginUser.html
@@ -69,7 +69,7 @@
             <div class="l_u_com_bang" style="margin-right: 0px;height: 30px;line-heigth: 30px;margin-top: -7px;">
             <!--<input type="button" class="button" id="sendcun" style="color: #999;border: 1px solid #999;font-size: .6rem;width: 3.5rem;padding: 0 .2rem" @click.stop.prevent="sendphone()" value="发送验证码"/>-->
             <!--<img class="" style="width: 90px;height: 30px;" id="tupiancun_user" />-->
-            <div id="param_code_user" style="width: 90px;height: 35px;" onclick="showcode()"></div>
+            <div id="param_code_user" style="width: 90px;height: 35px;"></div>
             </div>
           </div>
 
@@ -156,6 +156,12 @@
       checkboxClass: 'icheckbox_square-green',
       radioClass: 'iradio_square-green'
     });
+    var pc = document.getElementById('param_code_user');
+    if (pc.addEventListener) {
+      pc.addEventListener('click', showcode, false);
+    } else {
+      pc.attachEvent('onclick', showcode, false);
+    }
     var lS = document.getElementById('loginSubmit');
     if (lS.addEventListener) {
       lS.addEventListener('click', loginS, false);
@@ -203,10 +209,11 @@
 
   function showcode () {
     $.ajax({
-      url:"/param_code",
+      url:"/param_code?time="+new Date().getTime(),
       type: "get",
       success: function(result){
-        $('#param_code_user').html(result)
+        //$('#param_code_user').html(result)
+        $("#param_code_user")[0].innerHTML = result;
       },
       error:function(XMLHttpRequest, textStatus, errorThrown){
         console.log("获取失败，请重试！CODE:"+XMLHttpRequest.status)
