--- a/views/act_form.html
+++ b/views/act_form.html
@@ -222,7 +222,7 @@
     width:100%;
     min-width:1180px;
     height:auto;
-    background-image: url({{helper.cdnhost}}/assets/img/zhuanxiang.png);padding-top: 300px;background-repeat: no-repeat;background-size: 100% auto;
+    background-image: url({{helper.cdnhost}}/assets/img/zhuanxiang.jpg);padding-top: 300px;background-repeat: no-repeat;background-size: 100% auto;
   }
   h1 {
     font-size: 18px
