--- a/views/widget/top/top.html
+++ b/views/widget/top/top.html
@@ -180,7 +180,7 @@ input[type="checkbox"] {
         <div class="l_u_com_bang">
           <!--<input type="button" class="button" id="sendcun" style="color: #999;border: 1px solid #999;font-size: .6rem;width: 3.5rem;padding: 0 .2rem" @click.stop.prevent="sendphone()" value="发送验证码"/>-->
           <!--<img class="" style="width: 90px;height: 40px;" id="tupiancun" />-->
-          <div id="param_code" style="width: 90px;height: 35px;margin-top: -7px;"></div>
+          <div id="param_code" style="width: 90px;height: 35px;margin-top: -7px;cursor: pointer;"></div>
         </div>
       </div>
       <div class="form-group clearfix" style="margin-top: 20px;position: relative;">
