--- a/views/widget/top/top.html
+++ b/views/widget/top/top.html
@@ -164,7 +164,7 @@ input[type="checkbox"] {
 }
 </style>
 <!-- 登录 -->
-<div class="l_u" id="l_u" style="display: none;">
+<div class="l_u" id="l_u" style="display: none;height: 500px;">
   <div class="l_u_top"><img src="{{helper.cdnhost}}/assets/img/logo_login.png" alt=""></div>
   <div class="l_u_con">
     <p>验证码登录</p>
