--- a/views/login/binding.html
+++ b/views/login/binding.html
@@ -44,7 +44,7 @@
           </div>
           <div class="form-group clearfix" style="margin-left: -20px;">
             <div class="title"><span>*&nbsp;</span>图形验证码&nbsp;：</div>
-            <input  type="text" id="tupian_bin" class="form-control" style="width: 114px;display: inline-block;" required data-vaild="^\d{4}$" /><!--data-errmsg="验证码号码不正确，仅能包含4位数字"-->
+            <input  type="text" id="tupian_bin" class="form-control" style="width: 114px;display: inline-block;" required data-vaild="^[a-zA-Z0-9]{4}$" /><!--data-errmsg="验证码号码不正确，仅能包含4位数字"-->
             <div class="bind-button" style="width: 100px;float: left">
               <!--<input type="button" class="button" id="sendcun" style="color: #999;border: 1px solid #999;font-size: .6rem;width: 3.5rem;padding: 0 .2rem" @click.stop.prevent="sendphone()" value="发送验证码"/>-->
               <!--<input type="button" class="btn btn-primary" style="width: 100px;text-align: center;padding: 6px 2px;background: #fff;color: #c6a770;border: 1px solid #c6a770;border-radius: 3px;line-height: 0px" id="sendcun_binding" value="发送验证码"/>-->
