--- a/views/login/forget.html
+++ b/views/login/forget.html
@@ -55,6 +55,15 @@
             <input type="text" class="form-control" id="newEmail" required data-vaild="^1[3|4|5|7|8]\d{9}$" data-errmsg="手机号不正确" />
             <div class="ti">请输入手机号</div>
           </div>
+          <div class="form-group clearfix" style="margin-left: -20px;">
+            <div class="title"><span>*&nbsp;</span>图形验证码&nbsp;：</div>
+            <input  type="text" id="tupian_bin" class="form-control" style="width: 114px;display: inline-block;" required data-vaild="^[a-zA-Z0-9]{4}$" /><!--data-errmsg="验证码号码不正确，仅能包含4位数字"-->
+            <div class="bind-button" style="width: 100px;float: left">
+              <!--<input type="button" class="button" id="sendcun" style="color: #999;border: 1px solid #999;font-size: .6rem;width: 3.5rem;padding: 0 .2rem" @click.stop.prevent="sendphone()" value="发送验证码"/>-->
+              <!--<input type="button" class="btn btn-primary" style="width: 100px;text-align: center;padding: 6px 2px;background: #fff;color: #c6a770;border: 1px solid #c6a770;border-radius: 3px;line-height: 0px" id="sendcun_binding" value="发送验证码"/>-->
+              <div id="param_code_bin" style="width: 90px;height: 35px;margin-top: -16px;margin-left: 10px;cursor: pointer;"></div>
+            </div>
+          </div>
           <div class="form-group clearfix">
             <div class="title"><span>*&nbsp;</span>验&nbsp;证&nbsp;码&nbsp;：</div>
             <input  type="text" id="verify_forget" class="form-control" style="width: 114px;display: inline-block;" required data-vaild="^\d{6}$" /><!--data-errmsg="验证码号码不正确，仅能包含4位数字"-->
@@ -176,10 +185,29 @@
   $(document).ready(function () {
 
     $("form").Vaild();
+
+    //图片验证码
+    $.ajax({
+      url:"/param_code",
+      type: "get",
+      success: function(result){
+        $('#param_code_bin').html(result)
+      },
+      error:function(XMLHttpRequest, textStatus, errorThrown){
+        console.log("获取失败，请重试！CODE:"+XMLHttpRequest.status)
+      }
+    });
+
     $('.i-checks').iCheck({
       checkboxClass: 'icheckbox_square-green',
       radioClass: 'iradio_square-green'
     });
+    var pc = document.getElementById('param_code_bin');
+    if (pc.addEventListener) {
+      pc.addEventListener('click', showcode, false);
+    } else {
+      pc.attachEvent('onclick', showcode, false);
+    }
     var sP = document.getElementById('sendcun_forget');
     if (sP.addEventListener) {
       sP.addEventListener('click', sendphone_for, false)
@@ -220,6 +248,20 @@
     })
 
   })
+
+  function showcode () {
+    $.ajax({
+      url:"/param_code?time="+new Date().getTime(),
+      type: "get",
+      success: function(result){
+        //$('#param_code_user').html(result)
+        $("#param_code_bin")[0].innerHTML = result;
+      },
+      error:function(XMLHttpRequest, textStatus, errorThrown){
+        console.log("获取失败，请重试！CODE:"+XMLHttpRequest.status)
+      }
+    });
+  }
 
   function forgetS () {
     console.log('forget_ssssss')
@@ -315,12 +357,21 @@
       $('#newEmail').data("toogle", "left").data("placement", "right").data("container", "body").data("content", '请输入手机号码').popover({"trigger":"manual"}).popover("show");
       return
     }
+    if ($('#tupian_bin').val() == '') {
+      layer.msg('请输入图片验证码');
+      return
+    }
+    if (!/^[a-zA-Z0-9]{4}$/.test($("#tupian_bin").val())) {
+      layer.msg('请输入4位图片验证码');
+      return
+    }
     console.log('ajax')
     $.ajax({
       //url: ajaxUrlPrefix.phone + '/index.php?m=sendcode&phone=' + $('#newEmail').val(),
       url: '/sendcode_s',
-      type:'GET',
+      type:'post',
       data: {
+        param_code: $('#tupian_bin').val(),
         phone: $('#newEmail').val()
       },
       dataType:'json',
@@ -329,6 +380,23 @@
         console.log('msg', msg1);
         if (msg1.code === 0) {
           layer.msg('短信发送成功，请查阅手机');
+          var downcount = 60;
+          var time = setInterval(function (){
+            if (downcount === 0) {
+              $("#sendcun_binding").attr("value", "发送验证码");
+              $("#sendcun_binding").removeAttr("disabled");
+              clearInterval(time);
+              return
+            }else {
+              $("#sendcun_binding").attr("disabled", "disabled");
+              $("#sendcun_binding").attr("value", downcount + "s");
+              downcount--;
+            }
+          }, 1000);
+        } else if (msg1 == '1') {
+          layer.msg('图片验证码验证失败');
+        } else if (msg1.code === '1150013') {
+          layer.msg(msg1.message);
         } else {
           layer.msg('数据错误');
         }
@@ -338,20 +406,6 @@
         layer.msg("获取失败，请重试！CODE:"+XMLHttpRequest.status);
       }
     });
-
-    var downcount = 60;
-    var time = setInterval(function (){
-      if (downcount === 0) {
-        $("#sendcun_forget").attr("value", "发送验证码");
-        $("#sendcun_forget").removeAttr("disabled");
-        clearInterval(time);
-        return
-      }else {
-        $("#sendcun_forget").attr("disabled", "disabled");
-        $("#sendcun_forget").attr("value", downcount + "s");
-        downcount--;
-      }
-    }, 1000);
   }
 </script>
 
