修改验证码提示语

--- a/views/login/binding.html
+++ b/views/login/binding.html
@@ -248,7 +248,7 @@
             }
           }, 1000);
         } else if (msg == '1') {
-          layer.msg('图片验证码验证失败');
+          layer.msg('图片验证码输入错误');
         } else if (msg.code === '1150013') {
           layer.msg(msg.message);
         } else {
