--- a/views/login/forget.html
+++ b/views/login/forget.html
@@ -394,7 +394,7 @@
             }
           }, 1000);
         } else if (msg1 == '1') {
-          layer.msg('图片验证码验证失败');
+          layer.msg('图片验证码输入错误');
         } else if (msg1.code === '1150013') {
           layer.msg(msg1.message);
         } else {
