电话后面加冒号

--- a/views/article_detail.html
+++ b/views/article_detail.html
@@ -128,7 +128,7 @@
                 <i style="color:#333;font-size: 14px;">{{userinfo.position_name}}</i>
               </div>
               <div class="userinfo-information" >
-                邮箱：{{userinfo.email}} | 电话 {{userinfo.tel}}
+                邮箱：{{userinfo.email}} | 电话：{{userinfo.tel}}
               </div>
               <div class="userinfo-information" >
                 {{userinfo.organid | getCity()}}分公司：{{userinfo.organid | getCityAddress()}}
