评论默认头像

--- a/views/widget2/comment/comment.html
+++ b/views/widget2/comment/comment.html
@@ -137,7 +137,7 @@
                 vHtml = '<i class="adviser-v-i"></i>';
               }
   	          var html ='<div class="comment-list clearfix" >'+
-  	                       '<div class="comment-head" style="background:url('+fn.avaterimg(login_ss.uid,'small',0,login_ss.version)+') no-repeat 0 0;background-size:60px 76px;" >'+
+  	                       '<div class="comment-head" style="background:url('+fn.avaterimg(login_ss.uid,'small',0,login_ss.version)+') no-repeat 0 0;background-size:cover;" >'+
   	                       '</div>'+
   	                       '<div class="comment-info" >'+
   	                         '<div  class="comment-info-name-box">'+
