--- a/views/login/loginUser.html
+++ b/views/login/loginUser.html
@@ -45,7 +45,7 @@
     
     <div style="margin: 0px auto;height: 550px;min-width: 1180px;width: 100%;">{#background: url({{helper.cdnhost}}/assets/img/login_background.png);
     background-repeat: no-repeat;background-size: cover; #}
-      <img src="{{helper.cdnhost}}/assets/img/login_background.png" alt="" style="width: 100%;height: 550px;display:block;overflow:hidden;"/>
+      <img src="{{helper.cdnhost}}/assets/img/login_background.png" alt="" style="width: 100%;min-width: 1180px;height: 550px;display:block;overflow:hidden;"/>
     </div>
     
     <div class="login_content">
