--- a/views/widget/top/top_login.html
+++ b/views/widget/top/top_login.html
@@ -429,19 +429,19 @@ input[type="checkbox"] {
     console.log('hh[1]', hh[3]);
     var hhh = h.split("?");
     console.log('hhh', hhh[1])
-    if (hh[3] != 'register' && hh[3] != 'forget' && hh[3] != 'loginUser' && hh[3] != 'loginUser?h=http:') {
+    if (hh[3] != 'register' && hh[3] != 'forget' && hh[3] != 'login' && hh[3] != 'loginUser' && hh[3] != 'loginUser?h=http:') {
       console.log('11111')
 //      window.location.href = '/login?h=' + h
       // window.open('/loginUser?h=' + h);
       window.open(fn.urlgen("loginUser")+'?'+hhh[1]);
-    } else if (hhh[1] != undefined && hh[3] != 'register' && hh[3] != 'forget' && hh[3] != 'loginUser') {
+    } else if (hhh[1] != undefined && hh[3] != 'register' && hh[3] != 'forget' && hh[3] != 'login' && hh[3] != 'loginUser') {
       console.log('aaaa')
       window.location.reload();
     } else {
       console.log('22222');
 //      window.location.href = '/login'
       // window.open('/loginUser?h=');
-      window.open(fn.urlgen('loginUser')+'?h=');
+      window.open(fn.urlgen('loginUser'));
     }
   }
   //登录验证码
