--- a/views/country_list.html
+++ b/views/country_list.html
@@ -199,7 +199,7 @@
       },
       {
       "id": 3,
-      "type": "研究生"
+      "type": "硕士"
       },
       {
       "id": 4,
@@ -221,35 +221,39 @@
       {%
       set arcType = [
       {
-      "id": 0,
       "type": "全部"
       },
       {
-      "id": 11,
-      "type": "留学聚焦"
+      "type": "专业解析"
       },
       {
-      "id": 12,
-      "type": "申请攻略"
+      "type": "申请规划"
       },
       {
-      "id": 13,
-      "type": "签证指导"
-      },
-      {
-      "id": 14,
-      "type": "申请条件"
-      },
-      {
-      "id": 15,
       "type": "留学费用"
       },
       {
-      "id": 16,
-      "type": "专家解读"
+      "type": "留学条件"
       },
       {
-      "id": 17,
+      "type": "留学评估"
+      },
+      {
+      "type": "大学排名"
+      },
+      {
+      "type": "签证指南"
+      },
+      {
+      "type": "行前指导"
+      },
+      {
+      "type": "就业指导"
+      },
+      {
+      "type": "签证指导"
+      },
+      {
       "type": "留学案例"
       }
       ]
