--- a/views/widget/new_footer/common_footer.html
+++ b/views/widget/new_footer/common_footer.html
@@ -22,7 +22,7 @@
     line-height: 32px;
   }
 </style>
-<div class="liuxue-footer">
+<div class="liuxue-footer"  style="min-width:1200px;">
   <div class="liuxue-footer-content" style="margin-bottom: 0;">
     <div style="width: 708px;float: left">
       <div class="foot-map clearfix" style="width: 708px;">
