--- a/views/widget/new_nav_first/yimin_search_nav.html
+++ b/views/widget/new_nav_first/yimin_search_nav.html
@@ -1,5 +1,5 @@
 {% macro yimin_search_nav(tdk,helper) %}
-<div class="new_nav_first_red">
+<div class="new_nav_first_red" style="min-width: 1200px;">
     <div class="new_nav_first clearfix">
         <div class="new-logo-left">
             <a  target="_blank" href="{{ helper.urlgen('yimin') }}"><img src="{{helper.cdnhost}}/assets/img/yimin_logo_transparent.png" alt="金吉列移民官网"/></a>
