--- a/views/widget/new_nav_first/new_nav_red.html
+++ b/views/widget/new_nav_first/new_nav_red.html
@@ -1,5 +1,5 @@
 {% macro new_nav_red(tdk,helper) %}
-<div class="new_nav_first_red">
+<div class="new_nav_first_red" style="min-width: 1200px;">
     <div class="new_nav_first clearfix">
         <div class="new-logo-left">
             <a  target="_blank" href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}"><img src="{{helper.cdnhost}}/assets/img/logo_transparent.png" alt="金吉列留学官网"/></a>
