--- a/views/act_form.html
+++ b/views/act_form.html
@@ -240,7 +240,7 @@
   width:1200px;
    height:270px;
   margin: 0 auto;
-  background-image: url({{helper.cdnhost}}/assets/img/diditu.jpg);background-repeat: no-repeat;background-size: cover;text-align: center;color: #fff;font-size: 20px;background-position: center 0;
+  background-image: url({{helper.cdnhost}}/assets/img/diditu.png);background-repeat: no-repeat;background-size: cover;text-align: center;color: #fff;font-size: 20px;background-position: center 0;
 }
   .act_form_tu_xion {
     width:100%;
