--- a/views/widget/liuxue_item/liuxue_item.html
+++ b/views/widget/liuxue_item/liuxue_item.html
@@ -31,10 +31,10 @@
 .home-guanggao a{float: left;margin-right: 20px;background-color: #dcdcdc;}
 .home-guanggao a:nth-of-type(3){ margin-right: 0;}
 .home-guanggao a:last-child{ margin-right: 0;}
-.lx-head a{ font-size: 12px;color: #c13232;float: right;margin-top: 8px}
+.lx-head a{ font-size: 12px;color: #c13232;float: right;margin-top: 5px}
 .lx-hovertarg{ float: left;font-size: 0; }
-.lx-hovertarg li{ display: inline-block; margin-right: 8px; line-height: 1;}
-.lx-hovertarg li a{font-size: 14px;color: #999;width: 60px;	transition: .2s ease;-webkit-transition: .2s ease;}
+.lx-hovertarg li{ display: inline-block; margin-right: 8px;}
+.lx-hovertarg li a{font-size: 12px;color: #999;width: 60px;	transition: .2s ease;-webkit-transition: .2s ease;}
 .lx-hovertarg li a:hover{
 	color: #c13232;
 	font-weight: bold;
