--- a/views/act_form.html
+++ b/views/act_form.html
@@ -220,7 +220,7 @@
   }
   .act_form_tu {
     width:100%;
-    min-width:1180px;
+    min-width:1200px;
     height:auto;
     background-image: url({{helper.cdnhost}}/assets/img/zhuanxiang.jpg);background-repeat: no-repeat;background-size: 100% auto;
     padding-top: 22%;
@@ -237,16 +237,16 @@
     float: left;
   }
 .act_form_diye {
-  width:1200px;
-   height:270px;
+  min-width:1200px;
+  height:270px;
   margin: 0 auto;
   background-image: url({{helper.cdnhost}}/assets/img/diditu.png);background-repeat: no-repeat;background-size: cover;text-align: center;color: #fff;font-size: 20px;background-position: center 0;
 }
   .act_form_tu_xion {
     width:100%;
-    min-width:1180px;
+    min-width:1200px;
     height:968px;
-    background-image: url({{helper.cdnhost}}/assets/img/bioa_beijing.png);background-repeat: no-repeat;background-size: 100% auto;position: absolute;bottom: 0px;z-index: -100;
+    background-image: url({{helper.cdnhost}}/assets/img/bioa_beijing.png);background-repeat: no-repeat;background-size: 100% 100%;position: absolute;bottom: 0px;z-index: -100;
   }
   .act_form_beijingtu {
     width: 100%;
