--- a/views/widget/new_footer/yimin_footer.html
+++ b/views/widget/new_footer/yimin_footer.html
@@ -1,4 +1,4 @@
-<div class="liuxue-footer">
+<div class="liuxue-footer" style="min-width: 1200px;">
     <div class="liuxue-footer-content" style="margin-bottom: 0;">
         <div class="foot-map clearfix">
             <div class="sitemap sitemap01">
