--- a/views/widget/new_nav_first/nav_login.html
+++ b/views/widget/new_nav_first/nav_login.html
@@ -1,5 +1,5 @@
 {% macro nav_login(tdk,helper) %}
-<div class="new_nav_first_white">
+<div class="new_nav_first_white" style="min-width: 1200px;">
     <div class="new_nav_first clearfix">
         <div class="new-logo-left">
             <a  target="_blank" href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}"><img src="{{helper.cdnhost}}/assets/img/logo_common_black.png" alt="金吉列官网"/></a>
