--- a/views/act_form.html
+++ b/views/act_form.html
@@ -246,7 +246,7 @@
     width:100%;
     min-width:1200px;
     height:968px;
-    background-image: url({{helper.cdnhost}}/assets/img/bioa_beijing.png);background-repeat: no-repeat;background-size: 100% auto;position: absolute;bottom: 0px;z-index: -100;
+    background-image: url({{helper.cdnhost}}/assets/img/bioa_beijing.png);background-repeat: no-repeat;background-size: 100% 100%;position: absolute;bottom: 0px;z-index: -100;
   }
  .act_form_beijingtu {
    width: 100%;
