--- a/views/login/login.html
+++ b/views/login/login.html
@@ -35,14 +35,14 @@
 <body>
   {% include "widget/top/top_login.html" %}
 
-  <div class="main" style="width: 1180px;margin: 0 auto;">
+  <div class="main" style="margin: 0 auto;">
     {% import "widget/new_nav_first/nav_login.html" as nav_login %}
     {{ nav_login.nav_login(tdk,helper) }}
   </div>
 
   <div class="login_overseas clearfix">
     
-    <div style="margin: 0px auto;height: 550px;min-width: 1180px;width: 100%;">{#background: url({{helper.cdnhost}}/assets/img/login_background.png) no-repeat;background-size: cover;#}
+    <div style="margin: 0px auto;height: 550px;width: 100%;">{#background: url({{helper.cdnhost}}/assets/img/login_background.png) no-repeat;background-size: cover;#}
       <img src="{{helper.cdnhost}}/assets/img/login_background.png" alt="" style="width: 100%;height: 550px;display:block;overflow:hidden;"/>
     </div>
     
