--- a/views/about/schooltopic.html
+++ b/views/about/schooltopic.html
@@ -3,14 +3,9 @@
 {% include "header_new.html" %}
 <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/about.css">
 <style>
-  html, body, div, span, applet, object, iframe,h1, h2, h3, h4, h5, h6, p, blockquote, pre,a, abbr, acronym, address, big, cite, code,del, dfn, em, img, ins, kbd, q, s, samp,small, strike, strong, sub, sup, tt, var,b, u, i, center,dl, dt, dd, ol, ul, li,fieldset,form, label, legend,table, caption, tbody, tfoot, thead, tr, th, td,article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary,time, mark, audio, video {margin: 0; padding: 0; border: 0;font-size: 100%; font: inherit; vertical-align: baseline; list-style: none;}
-  a{text-decoration: none;}
-  a,input,button,select,textarea{outline:none;}
-  a:active,a:hover{outline: none; border:0; background: none; -webkit-tap-highlight-color: transparent;-moz-tap-highlight-color: transparent; -ms-tap-highlight-color: transparent; -o-tap-highlight-color: transparent;}
-  a,input,i{-webkit-tap-highlight-color:rgba(0,0,0,0); -moz-tap-highlight-color:rgba(0,0,0,0); -ms-tap-highlight-color:rgba(0,0,0,0);tap-highlight-color:rgba(0,0,0,0);}
-  body{font-family: "微软雅黑"; font-size: 14px; color:#666666;}
-  .clearfix:after{content:"";display:block;clear:both;}
-  .clearfix{zoom:1;}
+.new_nav_first .nav-right .search-type-box .search-type .search-type-text {
+  font-size: 12px;
+}
 
   /* banner */
   .banner{width:100%;background:url("../images/mkt_01.jpg") no-repeat center center; height: 500px; overflow:hidden;}
@@ -257,32 +252,32 @@
 {% include "widget/new_footer/common_footer.html" %}
 {% import "widget/new_slide/new_slide.html" as  slide %}
 {{slide.leyu_slide("AD_PROFILE_SEAT10",helper) }}
-<script src="{{helper.cdnhost}}/dep/js/schooltopic/index.js"></script>
-<script src="{{helper.cdnhost}}/dep/js/schooltopic/jquery.bxslider.js"></script>
-<script src="{{helper.cdnhost}}/dep/js/schooltopic/jquery-1.10.1.min.js"></script>
-<script src="{{helper.cdnhost}}/dep/js/schooltopic/Newform123.js"></script>
+
 <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
-<script type="text/javascript">
-  $(function() {
-    /*banner*/
-    var bannerWidth = $('.bannerBox').width();
-    var contWidth = $('.bannerBox .btnBox').width();
-    var marWidth = (bannerWidth-contWidth)/2;
-    $('.bannerBox .btnBox').css('left',marWidth);
-    /*导航点击跳转*/
-    var navBoxtop = $('.navWrap').offset().top;
-    $(window).scroll(function() {
-      var winscroll = $(window).scrollTop();
-      if (winscroll >= navBoxtop) {
-        $('.navWrap').addClass('posi');
-      }else{
-        $('.navWrap').removeClass('posi');
-      }
-    });
-  });
-</script>
+<script src="{{helper.cdnhost}}/dep/js/schooltopic/index.js"></script>
+<script src="{{helper.cdnhost}}/dep/js/schooltopic/jquery.bxslider.js"></script>
+<script src="{{helper.cdnhost}}/dep/js/schooltopic/Newform123.js"></script>
+<!--<script type="text/javascript">-->
+  <!--$(function() {-->
+    <!--/*banner*/-->
+    <!--var bannerWidth = $('.bannerBox').width();-->
+    <!--var contWidth = $('.bannerBox .btnBox').width();-->
+    <!--var marWidth = (bannerWidth-contWidth)/2;-->
+    <!--$('.bannerBox .btnBox').css('left',marWidth);-->
+    <!--/*导航点击跳转*/-->
+    <!--var navBoxtop = $('.navWrap').offset().top;-->
+    <!--$(window).scroll(function() {-->
+      <!--var winscroll = $(window).scrollTop();-->
+      <!--if (winscroll >= navBoxtop) {-->
+        <!--$('.navWrap').addClass('posi');-->
+      <!--}else{-->
+        <!--$('.navWrap').removeClass('posi');-->
+      <!--}-->
+    <!--});-->
+  <!--});-->
+<!--</script>-->
 </body>
 </html>
