--- a/views/index.html
+++ b/views/index.html
@@ -96,7 +96,7 @@
       <a   href="#country2"><img src="{{helper.cdnhost}}/assets/img/England.png" alt="英国留学"><p>英国</p></a>
       <a   href="#country4"><img src="{{helper.cdnhost}}/assets/img/Australia.png" alt="澳大利亚留学"><p>澳大利亚</p></a>
       <a   href="#country3"><img src="{{helper.cdnhost}}/assets/img/Canada.png" alt="加拿大留学"><p>加拿大</p></a>
-      <a   href="#country5"><img src="{{helper.cdnhost}}/assets/img/NEW ZEALAND.png" alt="新西兰留学"><p>新西兰</p></a>
+      <a   href="#country5"><img src="{{helper.cdnhost}}/assets/img/NEW_ZEALAND.png" alt="新西兰留学"><p>新西兰</p></a>
       <a   href="#country51"><img src="{{helper.cdnhost}}/assets/img/Japan.png" alt="日本留学"><p>日本</p></a>
       <a   href="#country50"><img src="{{helper.cdnhost}}/assets/img/Korea.png" alt="韩国留学"><p>韩国</p></a>
       <a  href="#country54"><img src="{{helper.cdnhost}}/assets/img/HongKong.png" alt="中国香港留学"><p>中国香港</p></a>
