--- a/views/yimin_index.html
+++ b/views/yimin_index.html
@@ -30,7 +30,7 @@
       <a href="#country10"><img src="{{helper.cdnhost}}/assets/img/Portuguesa.png" alt="葡萄牙移民"><p>葡萄牙</p></a>
       <a href="#country11"><img src="{{helper.cdnhost}}/assets/img/Cyprus.png" alt="塞浦路斯移民"><p>塞浦路斯</p></a>
       <!--<a href="#country109"><img src="{{helper.cdnhost}}/assets/img/Holand.png" alt="荷兰移民"><p>荷兰</p></a>-->
-      <a href="#country14"><img src="{{helper.cdnhost}}/assets/img/st. kitts.png" alt="圣基茨移民"><p>圣基茨</p></a>
+      <a href="#country14"><img src="{{helper.cdnhost}}/assets/img/st_kitts.png" alt="圣基茨移民"><p>圣基茨</p></a>
       <a href="#country12"><img src="{{helper.cdnhost}}/assets/img/Antigua.png" alt="安提瓜移民"><p>安提瓜</p></a>
       <a href="#country15"><img src="{{helper.cdnhost}}/assets/img/Grenada.png" alt="格林纳达移民"><p>格林纳达</p></a>
       <a href="#country13"><img src="{{helper.cdnhost}}/assets/img/Dominica.png" alt="多米尼克移民"><p>多米尼克</p></a>
