修改发布文章 本科样式问题

--- a/views/release_article.html
+++ b/views/release_article.html
@@ -104,7 +104,7 @@
                 <i>中学</i>
               </span>
               <span class="level-sel iconfont">
-                <i class="level-sel-i"></i>
+                <i class="level-sel-i iconfont"></i>
                 <i>本科</i>
               </span>
               <span class="level-sel">
